--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold text-gray-900 dark:text-white">Telegram</h4>
-                                <a href="https://t.me/Gezaine1" class="text-primary dark:text-blue-400 hover:underline">@Gezaine1</a>
+                                <a href="https://t.me/Zaytigy1" class="text-primary dark:text-blue-400 hover:underline">@Zaytigy1</a>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -820,7 +820,7 @@
                         </li>
                         <li class="flex items-center">
                             <i class="fab fa-telegram mr-3"></i>
-                            @Gezaine1
+                            @Zaytigy1
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-headset mr-3"></i>
@@ -846,7 +846,7 @@
 
     <!-- Sticky Contact Button -->
     <div class="sticky-contact">
-        <a href="https://t.me/Gezaine1" class="bg-primary hover:bg-primary/90 text-white p-4 rounded-full shadow-lg transition-all">
+        <a href="https://t.me/Zaytigy1" class="bg-primary hover:bg-primary/90 text-white p-4 rounded-full shadow-lg transition-all">
             <i class="fab fa-telegram text-2xl"></i>
         </a>
     </div>
