--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
-                                    <div class="hidden-address" data-full="TKNUswMU6iK9H8Y7txxJaEVP6WtMi8AJi4">
-                                        TKNUswMU6i...8AJi4
+                                    <div class="hidden-address" data-full="TGWNGz8SZ65to7veYyce3TpPM7Q53jY8cH">
+                                        TGWNGz8SZ6...jY8cH
                                     </div>
                                 </div>
                                 
@@ -477,8 +477,8 @@
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
-                                    <div class="hidden-address" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
-                                        0xe89e7b43...78a7c1
+                                    <div class="hidden-address" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
+                                        0x07e6A938...8b267
                                     </div>
                                 </div>
                                 
@@ -489,8 +489,8 @@
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
-                                    <div class="hidden-address" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
-                                        0xe89e7b43...78a7c1
+                                    <div class="hidden-address" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
+                                        0x07e6A938...8b267
                                     </div>
                                 </div>
                             </div>
@@ -518,8 +518,8 @@
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
-                                    <div class="hidden-address" data-full="1JEEicvwaD9LZy92DkHZt4NR4ESZucfKrn">
-                                        1JEEicvwa...ucfKrn
+                                    <div class="hidden-address" data-full="bc1quat0nvfjr9l9te5s4xa6u5wmadm0tmup96fwa6">
+                                        bc1quat0n...96fwa6
                                     </div>
                                 </div>
                             </div>
@@ -547,8 +547,8 @@
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
-                                    <div class="hidden-address" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
-                                        0xe89e7b43...78a7c1
+                                    <div class="hidden-address" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
+                                        0x07e6A938...8b267
                                     </div>
                                 </div>
                             </div>
@@ -833,7 +833,7 @@
             <div class="border-t border-gray-800 pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center mb-6">
                     <p class="text-gray-400">
-                        © 2025 CryptoArbBot. All rights reserved. SSL Secured • GDPR Compliant
+                        © 2026 CryptoArbBot. All rights reserved. SSL Secured • GDPR Compliant
                     </p>
                     <div class="flex space-x-6 mt-4 md:mt-0">
                         <span class="px-4 py-2 bg-green-600 text-white rounded-full text-sm font-bold">SSL SECURED</span>
