--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                 <div class="mb-4">
                                     <div class="flex justify-between items-center mb-2">
                                         <h5 class="font-medium text-gray-700 dark:text-gray-300">TRC20</h5>
-                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="TKNUswMU6iK9H8Y7txxJaEVP6WtMi8AJi4">
+                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="TGWNGz8SZ65to7veYyce3TpPM7Q53jY8cH">
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
@@ -473,7 +473,7 @@
                                 <div class="mb-4">
                                     <div class="flex justify-between items-center mb-2">
                                         <h5 class="font-medium text-gray-700 dark:text-gray-300">BEP20</h5>
-                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
+                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
@@ -485,7 +485,7 @@
                                 <div>
                                     <div class="flex justify-between items-center mb-2">
                                         <h5 class="font-medium text-gray-700 dark:text-gray-300">ERC20</h5>
-                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
+                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
@@ -514,7 +514,7 @@
                                 <div class="mb-4">
                                     <div class="flex justify-between items-center mb-2">
                                         <h5 class="font-medium text-gray-700 dark:text-gray-300">Address</h5>
-                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="1JEEicvwaD9LZy92DkHZt4NR4ESZucfKrn">
+                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="bc1quat0nvfjr9l9te5s4xa6u5wmadm0tmup96fwa6">
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
@@ -543,7 +543,7 @@
                                 <div class="mb-4">
                                     <div class="flex justify-between items-center mb-2">
                                         <h5 class="font-medium text-gray-700 dark:text-gray-300">Address</h5>
-                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0xe89e7b4307904be7b00202741733ffa0f478a7c1">
+                                        <button class="copy-address p-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors" data-full="0x07e6A93802304Cbe1d45b52CB37A1e531598b267">
                                             <i class="fas fa-copy"></i>
                                         </button>
                                     </div>
@@ -562,7 +562,7 @@
                     
                     <div class="bg-gradient-to-r from-yellow-400 to-yellow-500 text-white p-6 rounded-xl mb-8">
                         <h4 class="text-xl font-bold mb-3">Alternative Payment Options</h4>
-                        <p class="mb-4">If you want other payment methods like below, contact <a href="https://t.me/Gezaine1" class="font-bold underline">HERE</a></p>
+                        <p class="mb-4">If you want other payment methods like below, contact <a href="https://t.me/Zaytigy1" class="font-bold underline">HERE</a></p>
                         <ul class="space-y-2">
                             <li class="flex items-center"><i class="fas fa-check-circle text-white mr-2"></i> Wire Transfer</li>
                             <li class="flex items-center"><i class="fas fa-check-circle text-white mr-2"></i> CashApp</li>
